--- a/tasks/main/install.yml
+++ b/tasks/main/install.yml
@@ -24,7 +24,7 @@
     state: 'present'
     name: "{{ package_name_nano }}"
   register: result_nano_i
-  until: result_nano_i is succeded
+  until: result_nano_i is succeeded
   retries: 3
   tags:
     - install
