--- a/tasks/main/remove.yml
+++ b/tasks/main/remove.yml
@@ -24,7 +24,7 @@
     state: 'absent'
     name: "{{ package_name_nano }}"
   register: result_nano_r
-  until: result_nano_r is succeded
+  until: result_nano_r is succeeded
   retries: 3
   tags:
     - remove
